# galactic

./: Cargo.toml  license.md  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
data/: io.github.danielwolbach.Galactic.desktop
src/: config.rs  constants.rs  error.rs  main.rs  options.rs  theme.rs  utils.rs  window.rs
src/config/: general.rs  mod.rs  window.rs
src/theme/: deserialize.rs  error.rs  mod.rs
src/ui/: application.rs  mod.rs  terminal.rs  window.rs
