[package]
name = "galactic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"] }
dirs = "5.0.1"
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_12", "blueprint"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.11"
vte = { version = "0.7.1", package = "vte4" }
